test/functions/vass/lvalue-error-messages.good
lvalue-error-messages.chpl:6: error: illegal lvalue in assignment +=
lvalue-error-messages.chpl:7: error: illegal lvalue in <=>
