test/functions/vass/lvalue-error-messages.chpl
// Here are a couple of places where the error messages could be improved.

const xxx = 3;
var iii:int;

xxx += 5;
xxx <=> iii;
